--- a/OnlineShop/OnlineShop/Views/Cars/Edit.cshtml
+++ b/OnlineShop/OnlineShop/Views/Cars/Edit.cshtml
@@ -19,40 +19,40 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Make, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            @Html.LabelFor(model => model.Make, htmlAttributes: new { @class = "control-label col-sm-4" })
+            <div class="col-sm-4">
                 @Html.EditorFor(model => model.Make, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Make, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Model, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            @Html.LabelFor(model => model.Model, htmlAttributes: new { @class = "control-label col-sm-4" })
+            <div class="col-sm-4">
                 @Html.EditorFor(model => model.Model, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Model, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-sm-4" })
+            <div class="col-sm-4">
                 @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Year, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            @Html.LabelFor(model => model.Year, htmlAttributes: new { @class = "control-label col-sm-4" })
+            <div class="col-sm-4">
                 @Html.EditorFor(model => model.Year, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Year, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DateAdded, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            @Html.LabelFor(model => model.DateAdded, htmlAttributes: new { @class = "control-label col-sm-4" })
+            <div class="col-sm-4">
                 @Html.EditorFor(model => model.DateAdded, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DateAdded, "", new { @class = "text-danger" })
             </div>
@@ -60,20 +60,14 @@
 
        
         <div class="form-group">
-            @Html.LabelFor(m => m.Image, new { @class = "control-label col-md-2" })
-            <input type="file" name="file" id="file" class="control-label col-md-2" style="width: 100%;" />
+            @Html.LabelFor(m => m.Image, new { @class = "control-label col-sm-4" })
+            <input type="file" name="file" id="file" class="control-label col-sm-4" style="width: 100%;" />
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.BuyerId, "BuyerId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("BuyerId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.BuyerId, "", new { @class = "text-danger" })
-            </div>
-        </div>
+       
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-sm-offset-4 col-sm-4">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
