--- a/OnlineShop/OnlineShop/Views/Cars/Create.cshtml
+++ b/OnlineShop/OnlineShop/Views/Cars/Create.cshtml
@@ -47,7 +47,16 @@
                 @Html.ValidationMessageFor(model => model.Year, "", new { @class = "text-danger" })
             </div>
         </div>
-        
+        <div class="form-group">
+            @Html.LabelFor(m => m.CategoryId, new { @class = "col-sm-4 control-label" })
+            <div class="dropdown col-sm-4">
+                @Html.DropDownListFor(m => m.CategoryId,
+                        new SelectList(Model.Categories, "Id", "Name"),
+                        new { @class = "btn btn-info col-sm-12" })
+            </div>
+        </div>
+
+
 
 
         <div class="form-group">
