--- a/OnlineShop/OnlineShop/Views/Cars/Edit.cshtml
+++ b/OnlineShop/OnlineShop/Views/Cars/Edit.cshtml
@@ -58,6 +58,16 @@
                     @Html.ValidationMessageFor(model => model.DateAdded, "", new { @class = "text-danger" })
                 </div>
             </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.CategoryId, new { @class = "control-label col-sm-4" })
+            <div class="dropdown col-sm-4">
+                @Html.DropDownListFor(m => m.CategoryId,
+                        new SelectList(Model.Categories, "Id", "Name", Model.CategoryId),
+                        new { @class = "btn btn-info col-sm-12" })
+            </div>
+        </div>
+
+
 
 
             <div class="form-group">
