--- a/OnlineShop/OnlineShop/Views/Cars/Index.cshtml
+++ b/OnlineShop/OnlineShop/Views/Cars/Index.cshtml
@@ -4,7 +4,16 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Cars</h2>
+<p>
+    @using (Html.BeginForm("Index", "Home", FormMethod.Get))
+    {
+        <b>Search by : </b>@Html.RadioButton("Searchby", "Make",true)<text> Make</text>
+        @Html.RadioButton("Searchby", "Model")<text> Model</text>
+        @Html.RadioButton("Searchby", "Category")<text> Category</text>
+        @Html.TextBox("search")<input type="submit" value="Search"/>
+    }
+</p>
 
 <p>
     @Html.ActionLink("Create New", "Create")
