--- a/OnlineShop/OnlineShop/Views/Cars/Create.cshtml
+++ b/OnlineShop/OnlineShop/Views/Cars/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create a Car</h2>
 
 
 @using (Html.BeginForm("Create", "Cars", FormMethod.Post,
@@ -13,7 +13,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Car</h4>
+        
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -59,13 +59,7 @@
 
 
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DateAdded, htmlAttributes: new { @class = "control-label col-sm-4" })
-            <div class="col-sm-4">
-                @Html.EditorFor(model => model.DateAdded, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DateAdded, "", new { @class = "text-danger" })
-            </div>
-        </div>
+      
 
        <label for="file">Upload Image</label>
         <input type="file" name="file" id="file" style="width: 100%;"/>
@@ -75,7 +69,7 @@
 
         <div class="form-group">
             <div class="col-sm-offset-4 col-sm-4">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-success" />
             </div>
         </div>
     </div>
