--- a/OnlineShop/OnlineShop/Views/Cars/Delete.cshtml
+++ b/OnlineShop/OnlineShop/Views/Cars/Delete.cshtml
@@ -4,20 +4,16 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Delete a Car</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this Car?</h3>
 <div>
-    <h4>Car</h4>
+   
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Buyer.FirstName)
-        </dt>
+      
 
-        <dd>
-            @Html.DisplayFor(model => model.Buyer.FirstName)
-        </dd>
+       
 
         <dt>
             @Html.DisplayNameFor(model => model.Make)
@@ -75,7 +71,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
