--- a/OnlineShop/OnlineShop/Views/Categories/List.cshtml
+++ b/OnlineShop/OnlineShop/Views/Categories/List.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="well">
-        <h2>All Categories - @Html.ActionLink("Create", "Create", "Categories", null, new { @class = "btn btn-warning" })</h2>
+        <h2> Categories  @Html.ActionLink("Create", "Create", "Categories", null, new { @class = "btn btn-success" })</h2>
         <div class="row">
             <table class="table table-striped table-hover col-sm-12">
                 <thead>
