ImageRequirenments. ManyToManyFixed.SearchFixed

--- a/OnlineShop/OnlineShop/Views/Cars/Index.cshtml
+++ b/OnlineShop/OnlineShop/Views/Cars/Index.cshtml
@@ -63,7 +63,7 @@
         <td>
             @if (item.Image != null)
             {
-            <img src="data:image;base64,@System.Convert.ToBase64String(item.Image)"/>
+            <img src="data:image;base64,@System.Convert.ToBase64String(item.Image)" class="Images"/>
             }
         </td>
         <td>
