--- a/OnlineShop/OnlineShop/Views/Cars/Details.cshtml
+++ b/OnlineShop/OnlineShop/Views/Cars/Details.cshtml
@@ -4,19 +4,12 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Car Details</h2>
 
 <div>
-    <h4>Car</h4>
+    
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Buyer.FirstName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Buyer.FirstName)
-        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Make)
@@ -49,6 +42,7 @@
         <dd>
             @Html.DisplayFor(model => model.Year)
         </dd>
+       
 
         <dt>
             @Html.DisplayNameFor(model => model.DateAdded)
