--- a/OnlineShop/OnlineShop/Views/Categories/List.cshtml
+++ b/OnlineShop/OnlineShop/Views/Categories/List.cshtml
@@ -23,8 +23,8 @@
                             <td>@category.Id</td>
                             <td>@category.Name</td>
                             <td>
-                                @Html.ActionLink("Edit", "Edit", "Categories", new { @id = category.Id }, null)
-                                @Html.ActionLink("Delete", "Delete", "Categories", new { @id = category.Id }, null)
+                                @Html.ActionLink("Edit", "Edit", "Categories", new { @id = category.Id },  new { @class = "btn btn-info" })
+                                @Html.ActionLink("Delete", "Delete", "Categories", new { @id = category.Id },  new { @class = "btn btn-danger" })
                             </td>
                         </tr>
                     }
