--- a/OnlineShop/OnlineShop/Views/Shared/_Layout.cshtml
+++ b/OnlineShop/OnlineShop/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Online Shop", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Super Cars", "Index", "Home", new { area = "" }, new { @class = "Brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
