--- a/OnlineShop/OnlineShop/Views/Cars/Details.cshtml
+++ b/OnlineShop/OnlineShop/Views/Cars/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Car Details</h2>
+<h2 class="Cars">Car Details</h2>
 
 <div>
     
@@ -58,7 +58,7 @@
 
         <dd>
 
-            <img src="data:image;base64,@System.Convert.ToBase64String(Model.Image)" />
+            <img src="data:image;base64,@System.Convert.ToBase64String(Model.Image)" class="Images" />
             
         </dd>
 
