--- a/OnlineShop/OnlineShop/Views/Cars/Edit.cshtml
+++ b/OnlineShop/OnlineShop/Views/Cars/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit a Car</h2>
+<h2 class="Cars">Edit a Car</h2>
 
 
 @using (Html.BeginForm("Edit", "Cars", FormMethod.Post,
