--- a/OnlineShop/OnlineShop/Views/Account/Login.cshtml
+++ b/OnlineShop/OnlineShop/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
 
 
 
-        <h2>@ViewBag.Title.</h2>
+        <h2 class="Cars">@ViewBag.Title.</h2>
         <div class="row">
             <div class="col-md-8">
                 <section id="loginForm">
