--- a/OnlineShop/OnlineShop/Views/Cars/Create.cshtml
+++ b/OnlineShop/OnlineShop/Views/Cars/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create a Car</h2>
+<h2 class="Cars">Create a Car</h2>
 
 
 @using (Html.BeginForm("Create", "Cars", FormMethod.Post,
