--- a/OnlineShop/OnlineShop/Views/Cars/Delete.cshtml
+++ b/OnlineShop/OnlineShop/Views/Cars/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete a Car</h2>
+<h2 class="Cars">Delete a Car</h2>
 
-<h3>Are you sure you want to delete this Car?</h3>
+<h3 class="Cars">Are you sure you want to delete this Car?</h3>
 <div>
    
     <hr />
@@ -61,7 +61,7 @@
 
         <dd>
 
-            <img src="data:image;base64,@System.Convert.ToBase64String(Model.Image)" />
+            <img src="data:image;base64,@System.Convert.ToBase64String(Model.Image)"class="Images" />
 
         </dd>
 
