--- a/OnlineShop/OnlineShop/Views/Categories/Create.cshtml
+++ b/OnlineShop/OnlineShop/Views/Categories/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create a category</h2>
+<h2 class="Cars">Create a category</h2>
 
 
 @using (Html.BeginForm()) 
