--- a/OnlineShop/OnlineShop/Views/Categories/Delete.cshtml
+++ b/OnlineShop/OnlineShop/Views/Categories/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2 class="Cars">Delete</h2>
 
-<h3>Are you sure you want to delete this Category?</h3>
+<h3 class="Cars">Are you sure you want to delete this Category?</h3>
 <div>
     
     <hr />
