--- a/OnlineShop/OnlineShop/Views/Home/Index.cshtml
+++ b/OnlineShop/OnlineShop/Views/Home/Index.cshtml
@@ -11,16 +11,16 @@
 {
 
     <div class="row">
-        <div class="recipe col-md-6">
-            <h2>@car.Make @car.Model</h2>
+        <div class="col-md-6">
+            <h2 class="Cars">@car.Make @car.Model</h2>
             <div class="about">
                 Posted on <i>@car.DateAdded.ToString("d")</i>
 
                 <div>
                     @if (car.Image != null)
                     {
-                        <img src="data:image;base64,@System.Convert.ToBase64String(car.Image)" class="image" />
-                        <h4>@car.Price $</h4>
+                        <img src="data:image;base64,@System.Convert.ToBase64String(car.Image)" class="Images" />
+                        <h4 class="MoneyColour">@car.Price $</h4>
                     }
                 </div>
 
