--- a/OnlineShop/OnlineShop/Views/User/List.cshtml
+++ b/OnlineShop/OnlineShop/Views/User/List.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container">
     <div class="well">
-        <h2>Users</h2>
+        <h2 class="Cars">Users</h2>
 
         <table class="table table-striped table-hover">
             <thead>
