--- a/OnlineShop/OnlineShop/Views/Account/Register.cshtml
+++ b/OnlineShop/OnlineShop/Views/Account/Register.cshtml
@@ -45,7 +45,7 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-4 col-sm-4">
-                    <input type="submit" class="btn btn-default" value="Register" />
+                    <input type="submit" class="btn btn-success" value="Register" />
                 </div>
             </div>
 
