--- a/OnlineShop/OnlineShop/Views/Manage/ChangePassword.cshtml
+++ b/OnlineShop/OnlineShop/Views/Manage/ChangePassword.cshtml
@@ -6,12 +6,12 @@
     <div class="well">
 
 
-        <h2>@ViewBag.Title.</h2>
+        <h2 class="Cars">@ViewBag.Title.</h2>
 
         @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
         {
             @Html.AntiForgeryToken()
-            <h4>Change Password Form</h4>
+            <h4 class="Cars">Change Password Form</h4>
             <hr />
             @Html.ValidationSummary("", new { @class = "text-danger" })
             <div class="form-group">
